<resources>
    <string name="instructionsBasic">
        - Click on connection info button to change it.\n
        - Click on Connect button to start/stop communication.\n
        - Use the TX-Type Label to select what kind of data you want to send.\n
        - Write on the TX input the information you want to send.\n
        - On Text Mode, user can enable to append CR+LF during send operation.\n
        - If enabled, \'Append CR+LF\' bytes will be sent even if TX-Input is empty.\n
        - Use the app menu to access other options:\n
        *   Select how to show and manage the incoming data \'RX▼\'.\n
        *   Select advanced numeric reception options (int16, int32, float,..).\n
        *   Start/Stop FastSend Interface.\n
        *   Start Xtring Interface.\n
        *   Enter Settings Screen.\n
        - Settings Screen have additional options:\n
        *   Select appearance options: Light or Dark theme.\n
        *   Clear TX input after Send if needed.\n
        *   Change Number of Static and Scrollable FastSend Buttons.\n
        *   Change byte order (endian) when sending multiByte numbers.\n
        - Tablet users can select the reception options without entering to menu.\n
        - In WiFi Server mode, net port should be greater or equal to 1100 to avoid ports used by the system.
    </string>
    <string name="instructionsAjustesLayout">
        - LongClick on Connect button to show/hide ActionBar.(PRO)\n
        - Slide the ActionBar Down/Up to respectively Show/Hide it.(PRO)\n
        - When connected, LongClick on \'Send\' button to Show/Hide FastSend Interface without entering to menu.\n
        - Also can Show/Hide FastSend Interface by Sliding respectively from/to the right side of the screen.\n
        - Start Xtring mode by sliding from left side of the screen to the right.
    </string>
    <string name="instructionsFastSend">
        Operating \'FastSend Interface\': Save data in to buttons to send it with a single click.\n
        *   Select from TX-Type Label the kind of data you want to save on a FastSend Button.\n
        *   Write data on the TX-Input.\n
        *   Start FastSend mode (if not running yet).\n
        *   LongClick on one FastSend Button to save the TX data on the button.\n
        *   Simple Click on FastSend Button to automatically send the saved data.\n
        *   If TX-Input is empty, LongClick on a FastSend Button will erase saved data.\n
        *   FastSend Buttons will show type and data you just save.\n
        *   Pro users have Unlimited FastSend Buttons instead of 8. Change Quantities in Settings Screen.
    </string>
    <string name="instructionsXtring">
        Operating \'Xtring Interface\': Save an organized group of various types of data to send it as a package.\n
        *   By pressing the \'Add Item\' button you will be prompted to select a type of data.\n
        *   The enabled Send-Types are the same as normal operation on the principal screen.\n
        *   After selecting the type, a new screen will appear to write the desired Data.\n
        *   Finishing this, your just created XtringItem will be shown in the list.\n
        *   You can press the \'Type Label\' of any item to change it\'s type.\n
        *   You can press the \'Data Label\' of any item to modify it\'s Data value.\n
        *   You can define constant items to avoid replacing precious information\n
        *   You can delete the last package item by pressing the \'Delete Item\' Button.\n
        *   If some item data is empty \'No_Dat\' the package will not be sent and you be prompted to write into the first empty item.\n
        *   Press the Send Button to start the package transmission and return to the Principal Screen.\n
        *   Finish Xtring Mode(without sending a package) by sliding from the right side of the screen to the left or pressing Back.\n
        *   The package template and the actual values will be automatically saved on device memory.\n
        *   Pro users have Unlimited Xtring Items instead of 10.\n
        *   Pro users can select items to ignore during the send operation.\n
        *   Pro users can return automatically to the Xtring screen after sending the package by activating the CheckBox.\n
        *   Pro users can save Xtring Packages in FastSend Buttons by selecting the option on the menu or a LongClick on the Send Button.\n
        *   The known FastSend interface will appear with a upper TextInput to define the Button name, be sure to have no empty Xtring Items.
    </string>
    <string name="instructionsAdvRcv">
        Operating \'Advanced Reception\' types: Receive and show big numbers (16, 32 and 64 bit integers) and float, double numbers (32 and 64 bit).\n
        *   Requires the sender device to send a start byte = 13.\n
        *   Then send the data bytes in order from MSB to LSB.\n
        *   And finally send an end byte = 10.
    </string>
    <string name="instructionsPackRcv">
        Operating \'Package Reception\': New incoming data will replace the old one.\n
        *   Requires the connected device to send a package End byte = 10.\n
        *   Select the \'Package Reception\' Reception Type.\n
        *   Write number of received packages to accumulate before replacing with new ones (empty means 1).\n
        *   Enable/Disable byte reception if desired by using the CheckBox.\n
        - \'Package Reception\' mode can be mixed with the advanced reception types:\n
        *   First select \'Package Reception\'.\n
        *   Then select the advanced reception type to be interpreted and showed.
    </string>
    <string name="insGP">
        Support Us installing the Virtual Terminal PROkey app, you will obtain:\n
        *   Server working mode for WiFi and Bluetooth, letting you debug other communication apps or exchange data with clients connected to your device.\n
        *   Long and Double Send/Receive Data Types.\n
        *   Enhanced FastSend Interface unlimited button and Configurable Quantities.\n
        *   Enhanced Xtring Interface with unlimited items and new options.\n
        *   Save the Xtring packages as FastSend Buttons to use from the principal Screen.
    </string>
    <string name="app_name" translatable="false">Virtual Terminal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="VagosCORP" translatable="false">Vagos CORP</string>
    <string name="instruTitle">Instructions</string>
    <string name="close">Close instructions</string>
    <string name="dataString">DataString</string>
    <string name="updRate">#Upd</string>
    <string name="BRCV" translatable="false">Bytes</string>
    <string name="viewInstructions">View Instructions</string>
    <string name="NSIAS">Don\'t show at startup</string>
    <string name="Instructions_Basics">Basics</string>
    <string name="Instructions_Layout">Layout Gestures</string>
    <string name="Instructions_FastSend">FastSend Interface</string>
    <string name="Instructions_AdvRcv">Advanced Reception</string>
    <string name="Instructions_PackRcv">Package Reception</string>
    <string name="appendCRpLF">Append CR+LF</string>
    <string name="appendCRpLFl" translatable="false">+ CR+LF</string>
    <string name="Appearance">Theme</string>
    <string name="normalTheme" translatable="false">Light</string>
    <string name="darkTheme" translatable="false">Dark</string>
    <string name="title_activity_xtring">Xtring Interface</string>
    <string name="title_activity_xtring_editor">XtringEditor</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="getPRO">Get PRO features</string>
    <string name="UNProPack">ProKey BetaTest finished, thank you for participating</string>
    <string name="commMode">FastSend Interface</string>
    <string name="typSend">Send Type</string>
    <string name="RCVtype">Reception Type</string>
    <string name="DS" translatable="false">\n</string>
    <string name="defvalup" translatable="false">255</string>
    <string name="defvaldwn" translatable="false">0</string>
    <string name="Server_IP" translatable="false">10.0.0.6</string>
    <string name="Server_Port" translatable="false">2000</string>
    <string name="OK">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="Button_Conect">Connect</string>
    <string name="Button_Conecting">Connecting…</string>
    <string name="Button_DisConect">Disconnect</string>
    <string name="BSend">Send</string>
    <string name="NB">Your Device do not have Bluetooth</string>
    <string name="NBC">Bluetooth connection permission was not Granted by the user</string>
    <string name="NBCG">Bluetooth connection permission was Granted!</string>
    <string name="PGP">Please grant the Bluetooth connection permission to use this Mode</string>
    <string name="PGPS">Please grant the Bluetooth connection permission on App Settings</string>
    <string name="Button_Sel">Start</string>
    <string name="Sel_W">WiFi Client</string>
    <string name="Sel_BT">Bluetooth Client</string>
    <string name="Sel_Ws">WiFi Server</string>
    <string name="Sel_BTs">Bluetooth Server</string>
    <string name="menuRX" translatable="false">RX▼</string>
    <string name="ComXString" translatable="false">String</string>
    <string name="ComXByte" translatable="false">Byte</string>
    <string name="ComXInt16" translatable="false">Int16</string>
    <string name="ComXInt32" translatable="false">Int32</string>
    <string name="ComXInt64" translatable="false">Int64</string>
    <string name="ComXFloat" translatable="false">Float</string>
    <string name="ComXDouble" translatable="false">Double</string>
    <string name="ioTypeDual" translatable="false">Dual RX</string>
    <string name="ioTypePackage" translatable="false">Package RX</string>
    <string name="ioFormDec" translatable="false">Dec</string>
    <string name="ioFormHex" translatable="false">Hex</string>
    <string name="ioFormBin" translatable="false">Bin</string>
    <string name="textRCV">Text Reception</string>
    <string name="numRCV">Bytes Reception</string>
    <string name="shortRCV">Int16 Reception</string>
    <string name="intRCV">Int32 Reception</string>
    <string name="floatRCV">Float Reception</string>
    <string name="bothRCV">Dual Reception</string>
    <string name="updRCV">Package Reception</string>
    <string name="advTypRCV">Advanced Reception</string>
    <string name="disabled">Disabled</string>
    <string name="DarkTheme">Enable Dark Theme</string>
    <string name="ClearTXAS">Clear TX After Send</string>
    <string name="NumCommLabel">Number of FastSend Buttons</string>
    <string name="NumCommStat">Static Buttons</string>
    <string name="NumCommStatHint" translatable="false">4</string>
    <string name="NumCommScroll">Scrollable Buttons</string>
    <string name="NumCommScrollHint" translatable="false">4</string>
    <string name="ApplyChanges">Apply Changes</string>
    <string name="DiscardChanges">Discard Changes</string>
    <string name="StartEndByteLabel">Advanced RX Byte values</string>
    <string name="rcvStartByte">Start Byte</string>
    <string name="rcvStartByteHint" translatable="false">13</string>
    <string name="rcvEndByte">End Byte</string>
    <string name="rcvEndByteHint" translatable="false">10</string>
    <string name="pkgEndByte">Package End Byte</string>
    <string name="pkgSameLabel">Same End Byte for Package Reception</string>
    <string name="EndianSelect">Endian Selection</string>
    <string name="LittleEndian" translatable="false">LittleEndian</string>
    <string name="BigEndian" translatable="false">BigEndian</string>
    <string name="IODataTypes">Data Type</string>
    <string name="IOIntDataFormats">Integer Format</string>
    <string name="TXConfig">TX Config</string>
    <string name="RXConfig">RX Config</string>
    <string name="exitTutorial">Exit Tutorial</string>
</resources>