<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/rcvTyp"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/Text_RX">
        <menu>
            <item
                android:id="@+id/rcvText"
                android:title="@string/textRCV"/>
            <item
                android:id="@+id/rcvNum"
                android:title="@string/numRCV"/>
            <item
                android:id="@+id/rcvBoth"
                android:title="@string/bothRCV"/>
            <item
                android:id="@+id/rcvUpd"
                android:title="@string/updRCV"/>
            <item
                android:enabled="false"
                android:title="@string/advTypRCV"/>
            <item
                android:id="@+id/shortRcv"
                android:title="@string/shortRCV"/>
            <item
                android:id="@+id/intRcv"
                android:title="@string/intRCV"/>
            <item
                android:id="@+id/floatRcv"
                android:title="@string/floatRCV"/>
        </menu>
    </item>

    <item
        android:id="@+id/commMode"
        android:orderInCategory="2"
        android:title="@string/commMode"/>

    <item
        android:id="@+id/CommanderX"
        android:orderInCategory="3"
        android:title="@string/title_activity_commander_x"/>

    <item
        android:id="@+id/visual_settings"
        android:orderInCategory="4"
        android:title="@string/Appearance">
        <menu>
            <item
                android:id="@+id/themeDark"
                android:title="@string/darkTheme"/>
            <item
                android:id="@+id/themeNormal"
                android:title="@string/normalTheme"/>
        </menu>
    </item>
    <item
        android:id="@+id/viewInstructions"
        android:orderInCategory="5"
        android:title="@string/viewInstructions"/>
    <!--<item-->
        <!--android:id="@+id/endCOM"-->
        <!--android:orderInCategory="7"-->
        <!--android:title="@string/Cancel_Conn"-->
        <!--android:visible="true"/>-->
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"/>-->
    <!--android:orderInCategory="7"-->
</menu>