<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/rcvTyp"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/menuRX">
    </item>

    <item
        android:id="@+id/commMode"
        android:orderInCategory="3"
        android:title="@string/commMode"/>

    <item
        android:id="@+id/XtringMode"
        android:orderInCategory="4"
        android:title="@string/title_activity_xtring"/>

    <item
        android:id="@+id/viewInstructions"
        android:orderInCategory="6"
        android:title="@string/viewInstructions"/>

    <item
        android:id="@+id/exitTutorial"
        android:orderInCategory="7"
        android:title="@string/exitTutorial"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>

</menu>