<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".Configuration">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="showInstructions"
        android:text="@string/viewInstructions" />

    <CheckBox
        android:id="@+id/enDarkTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/DarkTheme" />

    <CheckBox
        android:id="@+id/enClearTX_AS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ClearTXAS" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/NumCommLabel" />

    <LinearLayout
        android:id="@+id/quantCommStat_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NumCommStat" />

        <EditText
            android:id="@+id/quantCommStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/NumCommStatHint"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantCommScroll_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NumCommScroll" />

        <EditText
            android:id="@+id/quantCommScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/NumCommScrollHint"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/StartEndByteLabel" />

    <LinearLayout
        android:id="@+id/rcvInitByte_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rcvStartByte" />

        <EditText
            android:id="@+id/rcvInitByte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/rcvStartByteHint"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rcvEndByte_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rcvEndByte" />

        <EditText
            android:id="@+id/rcvEndByte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/rcvEndByteHint"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="number" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/sameAsEndByte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/pkgSameLabel"
        android:layout_gravity="end"
        android:visibility="gone"
        android:enabled="false" />

    <LinearLayout
        android:id="@+id/pkgEndByte_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pkgEndByte" />

        <EditText
            android:id="@+id/pkgEndByte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/rcvEndByteHint"
            android:importantForAutofill="no"
            android:inputType="number" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/endianGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EndianSelect" />

        <RadioButton
            android:id="@+id/bigEndian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/BigEndian" />

        <RadioButton
            android:id="@+id/littleEndian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/LittleEndian" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exitConfig"
            android:text="@string/DiscardChanges" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="applyConfig"
            android:text="@string/ApplyChanges" />
    </LinearLayout>

</LinearLayout>