<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/main_vertical_margin"
    android:paddingLeft="@dimen/main_horizontal_margin"
    android:paddingRight="@dimen/main_horizontal_margin"
    android:paddingTop="@dimen/main_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Clientes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/Sel_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Sel_BT" />

        <Button
            android:id="@+id/Sel_BT"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Sel"
            android:onClick="InitBT" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Sel_W"
            android:src="@drawable/ic_w" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Sel_W" />

        <Button
            android:id="@+id/Sel_W"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="InitW"
            android:text="@string/Button_Sel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverLabelx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serverLabel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Servidores" />

        <TextView
            android:id="@+id/proLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Sel_BT"
            android:src="@drawable/ic_bt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Sel_BTs" />

        <Button
            android:id="@+id/Sel_SBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="InitBTs"
            android:text="@string/Button_Sel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/Sel_W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_w" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Sel_Ws" />

        <Button
            android:id="@+id/Sel_SW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="InitWs"
            android:text="@string/Button_Sel" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/VagosCORP"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/verLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:onClick="viewBuild"/>
    </LinearLayout>

</LinearLayout>